--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,35 +1,65 @@
-name: PINNSTRIPES-CI
+name: PINN-CI
 
 on:
    push:
-     branches: [main, master]
+     branches: [main]
    pull_request:
-     branches: [main, master]
+     branches: [main]
 
 jobs:
-  PINN:
+  Lint:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8]
+        python-version: ['3.10']
     defaults:
       run:
         working-directory: ${{github.workspace}}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{matrix.python-version}}
       - name: Install Black
         run: pip install black
       - name: Install isort
         run: pip install isort
-      - name: Formatting with black
+      - name: Formatting and sorting import
         run: |
-          black --check --line-length 79 --target-version 'py38' --include  '\.pyi?$' pinn_spm_param
-          black --check --line-length 79 --target-version 'py38' --include  '\.pyi?$' BayesianCalibration_spm
-      - name: Sort imports with isort
+          source .github/linters/formatting.sh
+          format pinn_spm_param true
+          format BayesianCalibration_spm true
+  Test:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ['3.10']
+    defaults:
+      run:
+        working-directory: ${{github.workspace}}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{matrix.python-version}}
+      - name: Install dependencies
         run: |
-          isort --check-only --diff --profile 'black' --multi-line 3 --trailing-comma --force-grid-wrap 0 --line-length 79 --use-parentheses pinn_spm_param
-          isort --check-only --diff --profile 'black' --multi-line 3 --trailing-comma --force-grid-wrap 0 --line-length 79 --use-parentheses BayesianCalibration_spm
+          python -m pip install --upgrade pip
+          python -m pip install pytest
+          python -m pip install -r requirements.txt
+      - name: Test SPM preprocess
+        run: |
+          cd pinn_spm_param/integration_spm
+          python main.py -nosimp -opt -lean
+          cd ../preProcess
+          python makeDataset_spm.py -nosimp -df ../integration_spm -frt 1
+      - name: Test SPM
+        run: |
+          cd pinn_spm_param/tests
+          python test_spm.py -m pytest -v
+      - name: Test SPM post process
+        run: |
+          cd pinn_spm_param/tests
+          python test_spm_postProc.py -m pytest
