fix spelling and include codespell in the ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,8 @@ jobs:
         run: pip install black
       - name: Install isort
         run: pip install isort
+      - name: Install codespell
+        run: pip install codespell
       - name: Formatting and sorting import
         run: |
           source .github/linters/formatting.sh
