--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: PINNSTRIPES-CI
 
 on:
    push:
-     branches: [main]
+     branches: [main, prettyPlot_pack]
      paths-ignore:
         - '*.md'
         - 'README*'
