--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,16 +68,16 @@ jobs:
       - name: Test SPM
         run: |
           cd pinn_spm_param/tests
-          python test_spm.py -m pytest -v
+          pytest -v test_spm.py
       - name: Test SPM post process
         run: |
           cd pinn_spm_param/tests
-          python test_spm_postProc.py -m pytest
+          pytest -v test_spm_postProc.py
       - name: Test SPM utils
         run: |
           pip install black
           cd pinn_spm_param/tests
-          python test_spm_utils.py -m pytest
+          pytest -v test_spm_utils.py
       - name: Test SPM Bayesian calibration
         run: |
           cp pinn_spm_param/integration_spm/solution.npz  pinn_spm_param/integration_spm/solution_0.5_1.npz
